--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-# LLM API Key (Required - Get from https://aistudio.google.com/apikey)
+# Gemini API Key (required) - Get from https://aistudio.google.com/apikey
+# Note: Requires Google Cloud billing enabled (free $300 trial available)
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Search Tool API Key (Optional - Get from https://serper.dev)
+# Search Tool API Key (optional) - Get from https://serper.dev
 SERPER_API_KEY=your_serper_api_key_here
 
-# Redis URL for Celery Queue Worker (Optional - for bonus queue feature)
+# Redis URL for Celery Queue Worker (Optional)
 REDIS_URL=redis://localhost:6379/0
