--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ pypdf>=4.0.0
 # Environment Variables
 python-dotenv>=1.0.0
 
+# HTTP Requests (for Serper search tool)
+requests>=2.31.0
+
 # Database (Bonus Feature)
 sqlalchemy>=2.0.0
 
